log/build_2023-09-18_16-15-45/my_bleak/stdout_stderr.log
running develop
running egg_info
writing ../../build/my_bleak/my_bleak.egg-info/PKG-INFO
writing dependency_links to ../../build/my_bleak/my_bleak.egg-info/dependency_links.txt
writing entry points to ../../build/my_bleak/my_bleak.egg-info/entry_points.txt
writing requirements to ../../build/my_bleak/my_bleak.egg-info/requires.txt
writing top-level names to ../../build/my_bleak/my_bleak.egg-info/top_level.txt
reading manifest file '../../build/my_bleak/my_bleak.egg-info/SOURCES.txt'
writing manifest file '../../build/my_bleak/my_bleak.egg-info/SOURCES.txt'
running build
running build_py
copying my_bleak/bleak_node.py -> /home/ngocdai/lidar_ws/build/my_bleak/build/lib/my_bleak
running install
running install_lib
copying /home/ngocdai/lidar_ws/build/my_bleak/build/lib/my_bleak/bleak_node.py -> /home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak
byte-compiling /home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak/bleak_node.py to bleak_node.cpython-310.pyc
running install_data
  File "/home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak/bleak_node.py", line 55
    await client.start_notify(short_payload_char_uuid, callback)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function

running install_egg_info
removing '/home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_bleak/my_bleak.egg-info to /home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak-0.0.0-py3.10.egg-info
running install_scripts
Installing bleak_node script to /home/ngocdai/lidar_ws/install/my_bleak/lib/my_bleak
writing list of installed files to '/home/ngocdai/lidar_ws/build/my_bleak/install.log'
